src/objects/OptyProgramFlagJunction__c.object
<CustomObject>
    <description>This Objects acts as a juction between Program FLag and Opportunity</description>
    <fields>
        <fullName>Contributing_Amount__c</fullName>
        <description>Contributing Amount = PF% x Opportunity Unweighted Value EUR. Requirement 5791.</description>
        <formula>Percentage__c  * Opportunity__r.Unweighted_Amount_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field will capture description of related Program Flag Data record</description>
        <formula>Program_Flag__r.Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Category__c</fullName>
        <description>This field will capture Flag Category of the related Program Flag Data record</description>
        <formula>TEXT( Program_Flag__r.Flag_Category__c )</formula>
        <label>Flag Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Flag_Active__c</fullName>
        <description>(from PFD object field)</description>
        <formula>Program_Flag__r.Is_Flag_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If flag is inactive, it can&apos;t be selected in an opportunity</inlineHelpText>
        <label>Is Flag Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Lookup Relationship with Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Program Flags</relationshipLabel>
        <relationshipName>Program_Flags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Percentage the opportunity is associated to a Program Flag. Requirement 5791.</description>
        <inlineHelpText>Percentage of the Opportunity Unweighted Value contributing to this Program Flag</inlineHelpText>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Flag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Flag</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program_Flag__c.Is_Flag_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program_Flag__c</referenceTo>
        <relationshipLabel>Program Flags</relationshipLabel>
        <relationshipName>Program_Flags</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Flag</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Program Flag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Flags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>